--- a/dashboard/src/pages/RateSubPages/ProductProgress.scss
+++ b/dashboard/src/pages/RateSubPages/ProductProgress.scss
@@ -1,12 +1,17 @@
+.container{
+    width:100%;
+    display: flex;
+    flex-direction: row;
+}
 .total-product{
     
     background-color: #fef6ff;
     border: 1px solid #ddd;
     width:40%;
-    height: 900px;
-    margin-left: 40px;
-    margin-top: 20px;
-    padding: 40px;
+    height: 940px;
+    margin-left: 30px;
+    margin-top: 10px;
+    padding: 30px;
     border-radius: 15px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s, box-shadow 0.3s;
@@ -20,9 +25,11 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    padding: 20px;
+    padding-left: 20px;
+    margin-right: 30px;
     margin-left: 0px;
-    height: 980px;
+    margin-top: 10px;
+    width: 60%;
 }
 
 .product-block {
@@ -37,7 +44,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s, box-shadow 0.3s;
     cursor: pointer;
-    height: fit-content;
+    height: 940px;
     
     &:hover {
         transform: scale(1.01);
@@ -48,13 +55,18 @@
 
 .product-info {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .product-title {
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+}
+.part-title{
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 30px;
 }
 
 .product-overall-progress {
@@ -75,6 +87,5 @@
 
 .Pchart-container {
     width: 100%;
-    margin-top: 0px;
-    margin-left: -30px;
+    margin-top: -40px;
 }
