--- a/dashboard/src/pages/RateSubPages/ProductProgress.scss
+++ b/dashboard/src/pages/RateSubPages/ProductProgress.scss
@@ -1,72 +1,42 @@
-.container{
-    width:100%;
-    display: flex;
-    flex-direction: row;
-}
-.total-product{
-    
-    background-color: #fef6ff;
-    border: 1px solid #ddd;
-    width:40%;
-    height: 940px;
-    margin-left: 30px;
-    margin-top: 10px;
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
-    transition: transform 0.3s, box-shadow 0.3s;
-    
-    &:hover {
-        transform: scale(1.01);
-    }
-}
-
 .product-progress-page {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    padding-left: 20px;
-    margin-right: 30px;
+    padding: 20px;
     margin-left: 0px;
-    margin-top: 10px;
-    width: 60%;
+    overflow-y: scroll;
+    height: 980px;
 }
 
 .product-block {
     background-color: #fef6ff;
     border: 1px solid #ddd;
     padding: 10px;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    border-radius: 15px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
     cursor: pointer;
-    height: 940px;
-    
-    &:hover {
-        transform: scale(1.01);
-    }
+    height: fit-content;
 }
 
-
+.product-block:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
 
 .product-info {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .product-title {
     font-size: 18px;
     font-weight: bold;
-}
-.part-title{
-    font-size: 16px;
-    font-weight: bold;
-    margin-left: 10px;
-    margin-bottom: -10px;
+    margin-bottom: 10px;
 }
 
 .product-overall-progress {
@@ -79,7 +49,14 @@
     color: #333;
 }
 
+.progress-bar {
+    flex-grow: 1;
+    margin-left: 10px;
+    width: 100%;
+}
+
 .Pchart-container {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 0px;
+    margin-left: -30px;
 }
