--- a/dashboard/src/pages/Summary/ProductPage.scss
+++ b/dashboard/src/pages/Summary/ProductPage.scss
@@ -1,43 +1,94 @@
-.productPage{
-  height: 100vh;
-  .container{
-    background-color: rgb(229, 232, 232);
+.productPage {
+  .container2 {
     justify-content: center;
     margin-top: 10px;
     display: grid;
-    grid-template-columns: 18% 37% 45%;
-    grid-template-rows: 30% 30% 40%;
+    grid-template-columns: 15% 40% 45%;
+    grid-template-rows: 67% 37%;
     grid-template-areas: 
-      "barChart progressBar graph"
-      "table table graph"
-      "table table exportButton";
-    grid-gap: 0.4rem;
-    height: 100%;
-    .barChart{
-      justify-content: center;
+      "machines table graph"
+      "machines percentages widgets3";
+    grid-gap: 0.2rem;
+
+    .machines {
+      background-color: rgb(216, 230, 230);
+      grid-area: machines;
       padding-top: 20px;
-      background-color: rgb(255, 255, 255);
-      grid-area: barChart;
-    }
-    .progressBar{
-      background-color: rgb(255, 255, 255);
-      grid-area: progressBar;
-      display: flex;
-      justify-content: center;
-      padding-top: 15px;
+      padding-left: 10px;
+      padding-right: 10px;
+
+      .machineTitle {
+        padding: 17px;
+        font-weight: 700;
+        font-size: 15px;
+        font-family: sans-serif;
+        justify-items: center;
+        align-items: center;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 1px 2px rgba(0, 0, 0, 0.05);
+        background-color: rgb(214, 181, 226);
+      }
     }
 
-    .table{
-      background-color: rgb(255, 255, 255);
-      grid-area: table;
+    .widgets3 {
+      background-color: rgb(228, 236, 236);
+      grid-area: widgets3;
+      display: flex;
+      padding: 20px;
+      gap: 20px;
+
+      .widgets {
+        height: 100%;
+        width: 100%;
+      }
     }
-    .graph{
-      background-color: rgb(255, 255, 255);
+
+    .graph {
+      background-color: rgb(225, 231, 231);
       grid-area: graph;
+      padding: 30px;
+      gap: 20px;
+
+      .chart-container {
+        width: 100%;
+        height: 100%;
+      }
     }
-    .exportButton{
-      background-color: rgb(255, 255, 255);
-      grid-area: exportButton;
+
+    .table {
+      background-color: rgb(225, 231, 231);
+      grid-area: table;
+      padding: 20px;
+      gap: 20px;
+      justify-content: center;
+
+      .tableTitle {
+        color: rgb(95, 88, 88);
+        padding: 17px;
+        font-weight: 700;
+        font-size: 18px;
+        font-family: sans-serif;
+        justify-items: center;
+        align-items: center;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 1px 2px rgba(0, 0, 0, 0.05);
+        background-color: rgb(251, 240, 255);
+      }
+
+      .productTable {
+        height: 85%;
+      }
+    }
+
+    .percentages {
+      background-color: rgb(225, 231, 231);
+      grid-area: percentages;
+      display: flex;
+      flex-direction: row;
+      padding: 17px;
+      gap: 20px;
+
+      .product-percentage {
+        height: 100%;
+      }
     }
   }
 }
