--- a/dashboard/src/pages/Summary/AllSummary.scss
+++ b/dashboard/src/pages/Summary/AllSummary.scss
@@ -1,33 +1,157 @@
-.allSummary{
+.allSummary {
   height: 100vh;
-  .container{
+
+  .container {
     background-color: rgb(229, 232, 232);
     justify-content: center;
     margin-top: 10px;
     display: grid;
-    grid-template-columns:50% 50%;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 41.75% 41.75%;
-    grid-template-areas: 
+    grid-template-areas:
       "table product1"
       "product2 product3";
     grid-gap: 0.4rem;
     height: 100%;
-    
-    .table{
+
+    .table {
       background-color: rgb(255, 255, 255);
       grid-area: table;
+      padding: 1rem;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      height: 100%;
+
+      .vanilla {
+        font-size: 12px;
+        width: 95%;
+        border-collapse: separate;
+        border-spacing: 0 10px;
+        text-align: center;
+        margin: auto;
+
+        th {
+          text-align: center;
+          background: #ffffff;
+          color: #000000;
+          padding: 10px;
+        }
+
+        td {
+          padding: 10px 5px;
+        }
+
+        tr {
+          font-family: Arial, sans-serif;
+          font-size: 17px;
+          font-weight: bold;
+          color: white;
+        }
+
+        tr:first-child {
+          background-color: RGB(181, 194, 198);
+        }
+
+        tr:nth-child(2) {
+          background-color: RGB(65, 143, 126);
+        }
+
+        tr:nth-child(3) {
+          background-color: RGB(146, 206, 193);
+        }
+
+        tr:nth-child(4) {
+          background-color: RGB(15, 74, 96);
+        }
+
+        tr:nth-child(5) {
+          background-color: RGB(74, 123, 143);
+        }
+
+        tr:nth-child(6) {
+          background-color: RGB(56, 56, 54);
+        }
+
+        tr.total-row { /* New styling for the total row */
+          background-color:rgb(77, 40, 119); /* Change this color if needed */
+          font-size: 19px; /* Slightly larger font */
+        }
+
+        tr:first-child td:first-child,
+        tr:nth-child(2) td:first-child,
+        tr:nth-child(3) td:first-child,
+        tr:nth-child(4) td:first-child,
+        tr:nth-child(5) td:first-child,
+        tr:nth-child(6) td:first-child,
+        tr.total-row td:first-child {
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
+          text-align: left;
+          padding-left: 7px;
+        }
+
+        tr:first-child td:last-child,
+        tr:nth-child(2) td:last-child,
+        tr:nth-child(3) td:last-child,
+        tr:nth-child(4) td:last-child,
+        tr:nth-child(5) td:last-child,
+        tr:nth-child(6) td:last-child,
+        tr.total-row td:last-child {
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+        }
+
+        td:nth-child(3),
+        td:nth-child(5),
+        td:nth-child(7),
+        td:nth-child(9) {
+          background: rgba(236, 236, 236, 0.95);
+          text-align: center;
+          padding-left: 7px;
+          width: 180px;
+          color: black;
+        }
+
+        td:nth-child(2),
+        td:nth-child(4),
+        td:nth-child(6),
+        td:nth-child(8) {
+          padding-left: 10px;
+        }
+
+        tbody tr {
+          border-bottom: none;
+        }
+
+        .delta_value {
+          display: inline-block;
+        }
+
+        .delta {
+          font-weight: bold;
+          font-size: 17px;
+          width: 25px;
+          color: #69A252;
+          height: 25px;
+          border-radius: 15px;
+          vertical-align: middle;
+          margin-left: 4px;
+        }
+
+        .delta_base {
+          text-align: left;
+          color: #000000;
+        }
+      }
     }
-    .product1{
+
+    .product1,
+    .product2,
+    .product3 {
       background-color: rgb(255, 255, 255);
-      grid-area: product1;
-    }
-    .product2{
-      background-color: rgb(255, 255, 255);
-      grid-area: product2;
-    }
-    .product3{
-      background-color: rgb(255, 255, 255);
-      grid-area: product3;
+      padding: 1rem;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
   }
 }
