--- a/dashboard/src/pages/Summary/AllSummary.scss
+++ b/dashboard/src/pages/Summary/AllSummary.scss
@@ -45,23 +45,23 @@
           font-family: Arial, sans-serif;
           font-size: 17px;
           font-weight: bold;
-          color: white;
+          color: rgb(15, 15, 15);
         }
 
         tr:first-child {
-          background-color: RGB(181, 194, 198);
+          background-color: #B3C1DC;
         }
 
         tr:nth-child(2) {
-          background-color: RGB(65, 143, 126);
+          background-color: #BAD0E7;
         }
 
         tr:nth-child(3) {
-          background-color: RGB(146, 206, 193);
+          background-color: #93A0C6;
         }
 
         tr:nth-child(4) {
-          background-color: RGB(15, 74, 96);
+          background-color: #788AB2;
         }
 
         tr:nth-child(5) {
@@ -72,9 +72,9 @@
           background-color: RGB(56, 56, 54);
         }
 
-        tr.total-row { /* New styling for the total row */
-          background-color:rgb(77, 40, 119); /* Change this color if needed */
-          font-size: 19px; /* Slightly larger font */
+        tr.total-row {
+          background-color: #788AB2;
+          font-size: 19px;
         }
 
         tr:first-child td:first-child,
@@ -154,63 +154,117 @@
       grid-area: product1;
 
       .product-details {
-        background-color: RGB(181, 194, 198);
+        width: 95%;
+        background-color: rgb(18, 96, 148);
         padding: 10px;
         border-radius: 8px;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         font-family: Arial, sans-serif;
         font-size: 16px;
         font-weight: bold;
-        color: #333;
+        color: #ffffff;
         text-align: center;
+        margin: auto;
       }
 
       .product-table {
-        width: 100%;
+        width: 95%;
         border-collapse: separate;
-        border-spacing: 0 10px;
+        border-spacing: 0 8px;
         text-align: center;
+        margin: auto;
 
         th, td {
-          padding: 10px 5px;
+          padding: 4px 4px;
           word-wrap: break-word;
           font-family: Arial, sans-serif;
-          font-size: 16px;
-          color: #fff;
+          font-size: 15px;
+          color: #0a0a0a;
+          font-weight: bold;
         }
 
         th {
-          background-color: RGB(65, 143, 126);
+          background-color: #ffffff;
         }
 
-        td {
-          background-color: RGB(146, 206, 193);
+        tr {
+          font-family: Arial, sans-serif;
+          font-size: 15px;
+          font-weight: bold;
+          color: white;
         }
 
-        /* Adjust the button size in the machine numbers column */
+        tbody tr:nth-child(1) {
+          background-color: #A0C8E2;
+        }
+
+        tbody tr:nth-child(2) {
+          background-color: #7FA1C4;
+        }
+
+        tbody tr:nth-child(3) {
+          background-color: #5B8AB2;
+        }
+
+        tbody tr:nth-child(4) {
+          background-color: #3C6F8F;
+        }
+
+        tbody tr:nth-child(5) {
+          background-color: #295C7D;
+        }
+
+        tbody tr:nth-child(1) td:first-child,
+        tbody tr:nth-child(2) td:first-child,
+        tbody tr:nth-child(3) td:first-child,
+        tbody tr:nth-child(4) td:first-child,
+        tbody tr:nth-child(5) td:first-child,
+        tbody tr.total-row td:first-child {
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
+          text-align: left;
+          padding-left: 7px;
+        }
+
+        tbody tr:nth-child(1) td:last-child,
+        tbody tr:nth-child(2) td:last-child,
+        tbody tr:nth-child(3) td:last-child,
+        tbody tr:nth-child(4) td:last-child,
+        tbody tr:nth-child(5) td:last-child,
+        tbody tr.total-row td:last-child {
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+        }
+
         td:nth-child(3) .button-group {
           display: flex;
-          justify-content: center;
-          gap: 5px;
+          justify-content: left;
+          gap: 1px;
 
           button {
-            background-color: RGB(15, 74, 96);
-            color: #b287db;
+            background-color: #C0C0C0;
+            color: #000000;
             border: none;
             border-radius: 5px;
-            padding: 5px 5px; /* Adjust padding to change button size */
+            padding: 1px 1px;
             cursor: pointer;
-            width: 40px; /* Set button width */
-            height: 30px; /* Set button height */
+            width: 50px; /* Adjusted width */
+            height: 28px; /* Adjusted height */
+            font-size: 14px;
 
             &:hover {
               background-color: RGB(74, 123, 143);
             }
           }
         }
+
+        @keyframes fadeIn {
+          to {
+            opacity: 1;
+          }
+        }
       }
     }
-
 
     .product2,
     .product3 {
@@ -218,6 +272,120 @@
       padding: 1rem;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
+      overflow-x: auto;
+
+      .product-details {
+        width: 95%;
+        background-color: rgb(18, 96, 148);
+        padding: 10px;
+        border-radius: 8px;
+        margin-bottom: 5px;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        font-weight: bold;
+        color: #ffffff;
+        text-align: center;
+        margin: auto;
+      }
+
+      .product-table {
+        width: 95%;
+        border-collapse: separate;
+        border-spacing: 0 8px;
+        text-align: center;
+        margin: auto;
+
+        th, td {
+          padding: 4px 4px;
+          word-wrap: break-word;
+          font-family: Arial, sans-serif;
+          font-size: 15px;
+          color: #0a0a0a;
+          font-weight: bold;
+        }
+
+        th {
+          background-color: #ffffff;
+        }
+
+        tr {
+          font-family: Arial, sans-serif;
+          font-size: 15px;
+          font-weight: bold;
+          color: white;
+        }
+
+        tbody tr:nth-child(1) {
+          background-color: #A0C8E2;
+        }
+
+        tbody tr:nth-child(2) {
+          background-color: #7FA1C4;
+        }
+
+        tbody tr:nth-child(3) {
+          background-color: #5B8AB2;
+        }
+
+        tbody tr:nth-child(4) {
+          background-color: #3C6F8F;
+        }
+
+        tbody tr:nth-child(5) {
+          background-color: #295C7D;
+        }
+
+        tbody tr:nth-child(1) td:first-child,
+        tbody tr:nth-child(2) td:first-child,
+        tbody tr:nth-child(3) td:first-child,
+        tbody tr:nth-child(4) td:first-child,
+        tbody tr:nth-child(5) td:first-child,
+        tbody tr.total-row td:first-child {
+          border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px;
+          text-align: left;
+          padding-left: 7px;
+        }
+
+        tbody tr:nth-child(1) td:last-child,
+        tbody tr:nth-child(2) td:last-child,
+        tbody tr:nth-child(3) td:last-child,
+        tbody tr:nth-child(4) td:last-child,
+        tbody tr:nth-child(5) td:last-child,
+        tbody tr.total-row td:last-child {
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+        }
+
+        td:nth-child(3) .button-group {
+          display: flex;
+          justify-content: left;
+          gap: 1px;
+
+          button {
+            background-color: #C0C0C0;
+            color: #000000;
+            font: bold;
+            border: none;
+            border-radius: 5px;
+            padding: 1px 1px;
+            cursor: pointer;
+            width: 50px; /* Adjusted width */
+            height: 28px; /* Adjusted height */
+            font-size: 14px;
+
+            &:hover {
+              background-color: RGB(74, 123, 143);
+            }
+          }
+        }
+
+        @keyframes fadeIn {
+          to {
+            opacity: 1;
+          }
+        }
+      }
     }
   }
 }
